--- a/DZKBX0_Beadando/DZKBX0_Beadando/AppWindows/FileUploaderWindow.xaml
+++ b/DZKBX0_Beadando/DZKBX0_Beadando/AppWindows/FileUploaderWindow.xaml
@@ -6,10 +6,31 @@
     xmlns:local="clr-namespace:DZKBX0_Beadando"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="FileUploaderWindow"
+    Icon="file_fav.ico"
     Width="800"
     Height="450"
     mc:Ignorable="d">
-    <Grid>
+    <Window.Resources>
+        <Style x:Key="colheader" TargetType="DataGridColumnHeader">
+            <Setter Property="Background" Value="#2f4f4f"/>
+            <Setter Property="Foreground" Value="Wheat"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="0, 5, 0, 5"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="datag1" TargetType="DataGrid">
+            <Setter Property="ColumnHeaderStyle" Value="{DynamicResource colheader}"></Setter>
+            <Setter Property="Background" Value="#829595"/>
+        </Style>
+        <Style x:Key="datag1_cell" TargetType="DataGridCell">
+            <Setter Property="Background" Value="#6d8484" />
+            <Setter Property="Foreground" Value="Wheat"/>
+            <Setter Property="BorderBrush" Value="#446161"/>
+            <Setter Property="FontSize" Value="13" />
+        </Style>
+    </Window.Resources>
+    <Grid Background="#446161">
         <Grid.RowDefinitions>
             <RowDefinition Height="5*" />
             <RowDefinition Height="2*" />
@@ -36,22 +57,22 @@
             IsReadOnly="False"
             SelectionMode="Extended"
             VerticalScrollBarVisibility="Visible"
-            AutoGenerateColumns="True">
+            AutoGenerateColumns="True"
+            Style="{DynamicResource datag1}"
+            CellStyle="{DynamicResource datag1_cell}">
         </DataGrid>
         <Button
             x:Name="btnRead"
             Grid.Row="1"
             Grid.Column="1"
-            Width="158"
-            Margin="35"
-            HorizontalAlignment="Center"
             Click="BtnRead_Click"
             Content="Load .csv file"
             Cursor="Hand"
             FontFamily="Consolas"
-            FontSize="20"
-            FontWeight="Bold" />
-        <Button x:Name="btnNext" Click="BtnNext_Click" Grid.Column="2" Grid.Row="1" Margin="35" Content="Tovább" FontFamily="Consolas" FontSize="20" FontWeight="Bold" IsEnabled="False" ></Button>
-        <TextBlock x:Name="tBlockResponse" Grid.Row="1" Margin="15" TextWrapping="Wrap" FontWeight="Bold" FontFamily="Consolas" FontSize="15"></TextBlock>
+            FontSize="25"
+            FontWeight="Bold"
+            Padding="15" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#97a7a7"/>
+        <Button x:Name="btnNext" Click="BtnNext_Click" Grid.Column="2" Grid.Row="1" Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Tovább" FontFamily="Consolas" FontSize="20" FontWeight="Bold" IsEnabled="False" Background="#97a7a7" ></Button>
+        <TextBlock x:Name="tBlockResponse" Grid.Row="1" Margin="15" TextWrapping="Wrap" FontWeight="Bold" FontFamily="Consolas" FontSize="17"></TextBlock>
     </Grid>
 </Window>
