--- a/DZKBX0_Beadando/DZKBX0_Beadando/AppWindows/MainWindow.xaml
+++ b/DZKBX0_Beadando/DZKBX0_Beadando/AppWindows/MainWindow.xaml
@@ -37,7 +37,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dgSteps" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="20" AutoGenerateColumns="False" ItemsSource="{Binding}" Background="#597272" Style="{DynamicResource datag1}" CellStyle="{DynamicResource datag1_cell}">
+        <DataGrid x:Name="dgSteps" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="20" AutoGenerateColumns="False" ItemsSource="{Binding}" Background="#597272" Style="{DynamicResource datag1}" CellStyle="{DynamicResource datag1_cell}" CanUserAddRows="False" CanUserDeleteRows="False" HeadersVisibility="Column">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Input" Width="*" Binding="{Binding Path=input}"></DataGridTextColumn>
                 <DataGridTextColumn Header="State Stack" Width="*" Binding="{Binding Path=statestack}"></DataGridTextColumn>
@@ -47,7 +47,7 @@
         <TextBlock Text="Kiértékelendő &#10;kifejezés:" Grid.Row="3" FontFamily="Consolas" FontSize="18" TextWrapping="WrapWithOverflow" Height="auto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,10,0,0" FontWeight="DemiBold"/>
         <TextBox x:Name="tBoxExpression" MaxLength="20" Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Left"  VerticalAlignment="Top" Padding="8" FontSize="19" FontFamily="Consolas" GotFocus="tBoxExpression_GotFocus" LostFocus="tBoxExpression_LostFocus" KeyDown="tBoxExpression_KeyDown" Foreground="#829595" Background="#d5dcdc" Margin="164,12,0,0"></TextBox>
         <TextBlock x:Name="tBlock1" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="20,65,30,10" FontSize="14" TextWrapping="WrapWithOverflow" FontFamily="Consolas" Foreground="#800614" FontWeight="Black"></TextBlock>
-        <TextBlock x:Name="tBlock2" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Grid.RowSpan="3" Padding="15" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="15" TextWrapping="WrapWithOverflow" FontFamily="Consolas" FontWeight="DemiBold"></TextBlock>
+        <TextBlock x:Name="tBlock2" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Grid.RowSpan="3" Padding="15" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="15" TextWrapping="WrapWithOverflow" FontFamily="Consolas" FontWeight="DemiBold"></TextBlock>
         <Button x:Name="butStart" Click="butStart_Click" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="5" Content="Mehet!" FontFamily="Consolas" FontSize="30" FontWeight="ExtraBlack" Margin="120,9,0,0" Background="#d5dcdc" Foreground="#2f4f4f"></Button>
         <Button x:Name="butExit" Click="butExit_Click" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="10" BorderThickness="0" FontFamily="Consolas" FontSize="15" Content="Kilépés" Width="81" Background="#d5dcdc" Foreground="#2f4f4f" FontWeight="DemiBold" Grid.ColumnSpan="2" Margin="286,0,0,0"></Button>
         <Button x:Name="butRestart" Click="butRestart_Click" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="10" BorderThickness="0" FontFamily="Consolas" FontSize="15" FontWeight="DemiBold"  Content="Újraindítás" Background="#d5dcdc" Foreground="#2f4f4f"></Button>
